[package]
name = "neteq"
version = "0.9.0"
edition = "2021"
description = "NetEQ-inspired adaptive jitter buffer for raw PCM audio"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["audio", "jitter", "webrtc", "neteq", "buffer"]
include = ["src/**/*"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[features]
default = []

